static/styles/portico.css
/* ... */
.feature-line .tagline {
    display: block;
    font-weight: 300;
    font-size: 30px;
    line-height: 32px;
}

.feature-line .description {
    display: block;
    font-size: 18px;
    line-height: 23px;
    padding-top: 20px;
}

.feature-illustration {
    width: 50%;
    display: inline-block;
    text-align: right;
}

.feature-image {
    display: inline-block;
    width: 100%;
    max-width: 422px;
    height: auto;
    margin-top: 30px;
    margin-bottom: 30px;
}

.feature-image.shadow {
    border-radius: 6px;
    box-shadow: 0px 0px 4px rgba(0,0,0,0.4);
}

.login-page,
.apps-page,
.register-page,
.portico-page,
.api-page {
    min-height: 100%;
    height: auto;
    margin-bottom: -54px;
}

.signup-signature {
    margin-top: 20px;
    padding-bottom: 50px;
}

.login-page-container,
.terms-page-container,
.feature-page-container,
.apps-page-container,
.integrations-page-container,
.register-page-container,
.portico-page-container,
.api-page-container {
    padding-top: 40px !important;
}

.portico-page-container,
.register-page-container {
    padding-top: 0px !important;
}

.hello-footer {
    height: 54px !important;
}

.portico-page-header {
    font-weight: 300;
    font-size: 35px;
    display: block;
    padding-top: 40px;
    margin-bottom: 20px;
}

.portico-page-header .portico-page-header-icon {
    margin-right: 12px;
}

.portico-page-header a,
.portico-page-header a:hover {
    color: #000;
    text-decoration: none;
    display: inline-block;
}

.portico-large-text {
    font-size: 16px;
    line-height: 20px;
}

.portico-secondary-header {
    font-weight: 300;
    font-size: 25px;
}

.integration-lozenges {
    text-align: center;
}

.integration-lozenge {
    width: 125px;
    background: #ededed;
    border-radius: 10px;
    margin: 15px 5px 0px 5px;
    display: inline-block;
    vertical-align: top;
}

.integration-instruction-block .integration-lozenge {
    float: left;
    margin-top: 5px;
}

.integration-lozenge:hover {
    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
    background: #fefefe;
}

.integration-lozenge-static:hover {
    box-shadow: none;
    background: #ededed;
}

.integration-lozenge .integration-link:hover {
    text-decoration: none;
}

.integration-lozenge .integration-logo {
    width: 125px;
    height: auto;
    display: block;
}

.integration-lozenge .integration-label {
    display: block;
    font-weight: 300;
    font-size: 18px;
    color: #000;
    text-align: center;
    padding-bottom: 18px;
    padding-top: 8px;
}

.integration-lozenge .integration-label-secondary {
    display: block;
    font-size: 12px;
    font-weight: 300;
    text-align: center;
    padding-bottom: 5px;
    color: #000;
}

.integration-instructions {
    margin-left: 150px;
}

#integration-instructions-group {
    display: none;
}

.login-page-header,
.apps-page-header,
.feature-page-header,
.integrations-page-header,
.register-page-header,
.api-page-header {
    font-weight: 300;
    font-size: 40px;
    display: block;
    margin: auto;
    width: 300px;
    text-align: center;
    margin-bottom: 50px;
}

.login-page-subheader {
    font-weight: 300;
    font-size: 24px;
    display: block;
    margin: auto;
    width: 300px;
    text-align: center;
    margin-top: -30px;
    margin-bottom: 50px;
}

.feature-page-header,
.api-page-header,
.apps-page-header,
.integrations-page-header
{
    padding-top: 40px;
}

.apps-page-header,
.integrations-page-header,
.register-page-header,
.api-page-header {
    line-height: 42px;
    width: auto;
    margin-bottom: 10px;
}

.apps-muted {
    font-weight: 300;
    font-size: 20px;
    display: block;
    margin: auto;
    text-align: center;
    margin-bottom: 30px;
}

.integrations-page-header,
.api-page-header {
    text-align: left;
}

.integrations-page-header {
    font-size: 25px;
    padding-top: 20px;
}

.integration-instruction-block {
    position: relative;
    margin-top: 15px;
}

#integration-list-link {
    position: absolute;
    top: 200px;
    width: 130px;
    text-align: center;
    display: none;
}

.integrations-page-header .integrations-icon {
    font-size: 22px;
    margin-right: 10px;
}

.apps-instructions-header {
    font-weight: 300;
    font-size: 25px;
}

.btn-app-download {
    font-size: 25px;
    margin-top: 15px;
    margin-bottom: 15px;
}

.btn-direct {
    margin-top: 0px;
    margin-bottom: 0px;
    padding: 8px;
    font-size: 18px;
    border-radius: 5px;
    min-width: 300px;
    color: #fff;
}

.btn-user {
    background-color: #428bca;
    border-color: #357ebd;
}

.btn-admin {
    background-color: #ff4136;
    border-color: #bd7e35;
}

.feature-page-header {
    width: auto;
}

.login-page .alert {
    width: 320px;
    margin: auto;
    margin-top: -30px;
    margin-bottom: 15px;
    text-align: center;
}

.login-form {
    margin: auto;
    width: 300px;
}

.register-form {
    margin: auto;
    width: 400px;
    text-align: center;
}

.register-button {
    margin-left: 10px;
}

.new-organization-button {
    margin-top: 10px;
}

.login-form .control-label, .register-form .control-label {
    margin-bottom: 2px;
}

.login-form .direct-label {
    margin-top: 50px;
    margin-bottom: 6px;
}

.login-form #id_username,
.login-form #id_password {
    width: 100%;
}

.login-form .control-group, .register-form .control-group {
    margin-right: 10px;
}

.login-forgot-password {
    float: right;
    line-height: 40px;
    position: relative;
    right: -15px;
    font-weight: 300;
}

.login-google, .register-google, .login-sso, .login-github {
    width: 300px;
    margin: auto;
    text-align: center;
    margin-top: 30px;
}

.login-google-button, .register-google-button, .login-github-button {
    margin-left: 10px;
}

.main-headline-container,
.os-headline-container {
    position: relative;
    height: 100%;
    padding-top: 40px !important;
}
/* ... */

